<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="Home"
            android:icon="@drawable/home"></item>
        <item
            android:id="@+id/action_signin"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"
            android:icon="@drawable/signin"/>

        <item
            android:id="@+id/action_userProfile"
            android:orderInCategory="100"
            android:title="@string/action_userProfile"
            app:showAsAction="never"
            android:icon="@drawable/user1"/>

        <item
            android:id="@+id/appwebsite"
            android:title="App Website"
            android:icon="@drawable/website"></item>
        <item
            android:id="@+id/tutorial"
            android:title="Tutorials"
            android:icon="@drawable/tutorial"></item>
        <item
            android:id="@+id/customersupport"
            android:title="Customer Support"
            android:icon="@drawable/customer"></item>
        <item
            android:id="@+id/action_logout"
            android:orderInCategory="100"
            android:title="@string/action_logout"
            android:icon="@drawable/signout"
            app:showAsAction="never" />
        <item
            android:id="@+id/exit"
            android:title="Exit"
            android:icon="@drawable/exiticon"></item>

    </group>

</menu>